--- a/index.html
+++ b/index.html
@@ -51,13 +51,15 @@
         
         <section class="contact">
             <h2>Kapcsolat</h2>
-            <p>Elérhetsz engem Discordon (név: **Dewy**), vagy a saját weboldalamon keresztül.</p>
-            <p class="discord-tag">Discord: **Dewy#0000** (Példa)</p>
+            <p>Discordom:</p>
+            <p class="discord-tag">Discord:xdewy</p>
+            <p>Tiktokom:</p>
+            <p class="discord-tag">Tiktok: dewy.edits0</p>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 Dewy. Készült a karácsony szellemében. 🎄</p>
+        <p>&copy; 2025 dewy - Portfolió🎄</p>
     </footer>
 
     <script>
